[tool.poetry]
name = "fact-check"
version = "0.1.0"
description = ""
authors = ["Felix Mönckemeyer <felix.moenckemeyer@rwth-aachen.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
